[gd_scene load_steps=18 format=2]

[ext_resource path="res://Font/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/main.gd" type="Script" id=2]
[ext_resource path="res://Font/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Picture/Profile.png" type="Texture" id=4]
[ext_resource path="res://Font/OpenSans-SemiBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.85098, 0.34902, 0.117647, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.94902, 0.396078, 0.133333, 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.85098, 0.34902, 0.117647, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.94902, 0.396078, 0.133333, 1 )

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.85098, 0.34902, 0.117647, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.94902, 0.396078, 0.133333, 1 )

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 46
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = -3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 14
font_data = ExtResource( 5 )

[node name="Main Scene" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 130.047, 525.0 ],
"_edit_vertical_guides_": [ 1027.6, 39.7425, 994.037, 594.343 ]
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1034.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scene1" type="Button" parent="."]
margin_left = 40.0
margin_top = 438.0
margin_right = 190.0
margin_bottom = 495.0
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Scene 1"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="scene2" type="Button" parent="."]
margin_left = 220.0
margin_top = 438.0
margin_right = 370.0
margin_bottom = 495.0
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Scene 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scene3" type="Button" parent="."]
margin_left = 400.0
margin_top = 438.0
margin_right = 550.0
margin_bottom = 495.0
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Scene 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="profil" type="Sprite" parent="."]
position = Vector2( 794, 300 )
texture = ExtResource( 4 )

[node name="nama" type="RichTextLabel" parent="."]
margin_left = 40.0
margin_top = 130.0
margin_right = 594.0
margin_bottom = 325.0
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Halo, saya Irsyad Muhammad (191524014)"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deskripsi_tugas" type="RichTextLabel" parent="."]
margin_left = 40.0
margin_top = 282.0
margin_right = 554.0
margin_bottom = 398.0
custom_fonts/normal_font = SubResource( 12 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Tekan salah satu dari ketiga button di bawah ini untuk melihat scene yang tersedia. Scene 1 adalah scene yang menampilkan hasil Random Line Generator. Scene 2 adalah scene yang menampilkan hasil update fungsi Line Generator. Scene 3 adalah scene yang menampilkan hasil fungsi shape berbahan dasar garis. "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="scene1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="scene2" to="." method="_on_scene2_pressed"]
[connection signal="pressed" from="scene3" to="." method="_on_scene3_pressed"]
